--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   }
 }
