--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "@types/node-schedule": "^2.1.7",
     "concurrently": "^9.1.2",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node-schedule": "^2.1.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
   }
